--- a/datafundament_fb/locations/templates/locations/location-admin.html
+++ b/datafundament_fb/locations/templates/locations/location-admin.html
@@ -36,7 +36,7 @@
         | Voor het beheren van de locatie eigenschappen.
     </li>
     <li>
-        <a href="{% url 'admin:locations_propertygroup_changelist' %}">
+        <a href="{% url 'propertygroup-list' %}">
             <span class="icon">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" aria-hidden="true" focusable="false">
                     <path fill-rule="evenodd" d="m9.757 32-2.9-2.91L19.937 16 6.857 2.91 9.757 0l16 16z"></path>
@@ -47,7 +47,7 @@
         | Voor het groeperen van de locatie eigenschappen.
     </li>
     <li>
-        <a href="{% url 'admin:locations_externalservice_changelist' %}">
+        <a href="{% url 'externalservice-list' %}">
             <span class="icon">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" aria-hidden="true" focusable="false">
                     <path fill-rule="evenodd" d="m9.757 32-2.9-2.91L19.937 16 6.857 2.91 9.757 0l16 16z"></path>
