locationproperty list view and base update form

--- a/datafundament_fb/locations/templates/locations/location-admin.html
+++ b/datafundament_fb/locations/templates/locations/location-admin.html
@@ -25,7 +25,7 @@
         | Overzicht van alle locaties en het toevoegen, wijzigen van bestaande.
     </li>
     <li>
-        <a href="{% url 'admin:locations_locationproperty_changelist' %}">
+        <a href="{% url 'locationproperty-list' %}">
             <span class="icon">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 32 32" aria-hidden="true" focusable="false">
                     <path fill-rule="evenodd" d="m9.757 32-2.9-2.91L19.937 16 6.857 2.91 9.757 0l16 16z"></path>
