--- a/datafundament_fb/locations/templates/locations/propertygroup-update.html
+++ b/datafundament_fb/locations/templates/locations/propertygroup-update.html
@@ -31,7 +31,10 @@
     {% csrf_token %}
     {% for field in form %}
     <div class="data-view-row">
-        <div class="data-label"><label for="{{ field.auto_id }}">{{ field.label }}</label></div>
+        <div class="data-label">
+            <label for="{{ field.auto_id }}">{{ field.label }}</label>
+            {% if field.field.required %}<span class="required-field">*</span>{% endif %}
+        </div>
         <div class="data-value">
             {{ field }}
             {{ field.errors }}
