--- a/datafundament_fb/locations/templates/locations/locationproperty-update.html
+++ b/datafundament_fb/locations/templates/locations/locationproperty-update.html
@@ -1,8 +1,5 @@
-{% extends 'admin/admin_base.html' %}
-{% load i18n admin_urls static admin_modify %}
-
-{% block extrastyle %}{{ block.super }}
-<link rel="stylesheet" href="{% static 'admin/css/forms.css' %}">{% endblock %}
+{% extends 'locations/generic-list.html' %}
+{% load i18n static admin_urls admin_modify utils %}
 
 {% block breadcrumbs %}
 <div class="breadcrumbs">
@@ -10,19 +7,13 @@
     <span>&rsaquo;</span>
     <a href="{% url 'location-admin' %}">{% translate 'Beheer' %}</a>
     <span>&rsaquo;</span>
-    <a href="{% url 'externalservice-list' %}">Locatie eigenschappen</a>
+    <a href="{% url object|reverse_url:'list' %}">{{ object|verbose_name:'plural' }}</a>
     <span>&rsaquo;</span>
-    {{ object.label }} wijzigen
+    {{ object.label }}
+    <span>&rsaquo;</span>
+    Wijzigen
 </div>
 {% endblock %}
-
-{% if messages %}
-<ul class="messages">
-    {% for message in messages %}
-    <li{% if message.tags %} class="{{ message.tags }}" {% endif %}>{{ message }}</li>
-    {% endfor %}
-</ul>
-{% endif %}
 
 {% block content %}
 <h2>{{ object.label }}</h2>
@@ -42,8 +33,10 @@
     </div>
     {% endfor %}
     <div class="btn-container">
-        <button class="btn btn-primair" type="submit" name="_save" value="Save" formaction="{% url 'externalservice-update' object.id %}">Opslaan</button>
-        <a href="{% url 'externalservice-list' %}" class="btn btn-secundair">Annuleren</a>
+        <button class="btn btn-primair" type="submit" name="_save" value="Save"
+            formaction="{% url object|reverse_url:'update' object.id %}">Opslaan</button>
+        <a href="{% url object|reverse_url:'list' %}" class="btn btn-secundair">Annuleren</a>
+        <a href="{% url object|reverse_url:'delete' object.id %}" class="btn btn-secundair">Verwijderen</a>
     </div>
 </form>
 
