--- a/datafundament_fb/locations/templates/locations/locationproperty-update.html
+++ b/datafundament_fb/locations/templates/locations/locationproperty-update.html
@@ -20,6 +20,10 @@
 
 <form action="." method="POST" novalidate>
     {% csrf_token %}
+    <div class="data-view-row">
+        <div class="data-label">Gegevens type</div>
+        <div class="data-value">{{ object.get_property_type_display }}</div>
+    </div>
     {% for field in form %}
     <div class="data-view-row">
         <div class="data-label">
@@ -32,11 +36,26 @@
         </div>
     </div>
     {% endfor %}
+    {% if object.property_type == 'CHOICE' and property_options|length > 0 %}
+    <div class="data-view-row">
+        <div class="data-label">Keuze opties</div>
+        <div class="data-value">
+            <dl class="data-view">
+                {% for field in property_options %}
+                <div class="data-view-row">
+                    <dd class="data-value"><a href="{% url 'propertyoption-update' object.id field.id %}">{{ field.option }}</a></dd>
+                </div>
+                {% endfor %}
+            </dl>
+        </div>
+    </div>
+    {% endif %}
     <div class="btn-container">
         <button class="btn btn-primair" type="submit" name="_save" value="Save"
             formaction="{% url object|reverse_url:'update' object.id %}">Opslaan</button>
         <a href="{% url object|reverse_url:'list' %}" class="btn btn-secundair">Annuleren</a>
         <a href="{% url object|reverse_url:'delete' object.id %}" class="btn btn-secundair">Verwijderen</a>
+        <a href="{% url 'propertyoption-create' object.id %}" class="btn btn-secundair">Optie toevoegen</a>
     </div>
 </form>
 
