--- a/datafundament_fb/locations/templates/locations/locationproperty-delete.html
+++ b/datafundament_fb/locations/templates/locations/locationproperty-delete.html
@@ -1,5 +1,21 @@
 {% extends 'locations/generic-delete.html' %}
 {% load i18n static admin_urls admin_modify utils %}
+
+{% block breadcrumbs %}
+<div class="breadcrumbs">
+    <a href="{% url 'locations_urls:location-list' %}">Home</a>
+    <span>&rsaquo;</span>
+    <a href="{% url 'location-admin' %}">{% translate 'Beheer' %}</a>
+    <span>&rsaquo;</span>
+    <a href="{% url object|reverse_url:'list' %}">{{ object|verbose_name:'plural' }}</a>
+    <span>&rsaquo;</span>
+    <a href="{% url object|reverse_url:'update' object.id %}">{{ object.label }}</a>
+    <span>&rsaquo;</span>
+    Verwijderen
+</div>
+{% endblock %}
+
+
 {% block content %}
 <h2>{{ object.label }}</h2>
 
