--- a/datafundament_fb/locations/templates/locations/propertyoption-create.html
+++ b/datafundament_fb/locations/templates/locations/propertyoption-create.html
@@ -20,15 +20,6 @@
 </div>
 {% endblock %}
 
-
-{% if messages %}
-<ul class="messages">
-    {% for message in messages %}
-    <li{% if message.tags %} class="{{ message.tags }}" {% endif %}>{{ message }}</li>
-    {% endfor %}
-</ul>
-{% endif %}
-
 {% block content %}
 <h2>Nieuwe {{ model|verbose_name }} voor {{ model.location_property.label }}</h2>
 
@@ -48,7 +39,7 @@
     {% endfor %}
     <div class="btn-container">
         <button class="btn btn-primair" type="submit" name="_save" value="Save" formaction="{% url 'propertyoption-create' location_property.id  %}">Aanmaken</button>
-        <a href="{% url 'locationproperty-update' location_property.id %}" class="btn btn-secundair">Annuleren</a>
+        <a href="{% url 'propertyoption-list' location_property.id %}" class="btn btn-secundair">Annuleren</a>
     </div>
 </form>
 
