--- a/datafundament_fb/locations/templates/locations/propertyoption-delete.html
+++ b/datafundament_fb/locations/templates/locations/propertyoption-delete.html
@@ -20,14 +20,6 @@
 </div>
 {% endblock %}
 
-{% if messages %}
-<ul class="messages">
-    {% for message in messages %}
-    <li{% if message.tags %} class="{{ message.tags }}" {% endif %}>{{ message }}</li>
-    {% endfor %}
-</ul>
-{% endif %}
-
 {% block content %}
 <h2>{{ object.name }}</h2>
 
@@ -36,7 +28,7 @@
     <p>Weet je zeker dat je '{{ object.option }}' uit {{ object.location_property.label }} wilt verwijderen?</p>
     <div class="btn-container">
         <button class="btn btn-primair" type="submit" name="_save" value="Save" formaction="{% url 'propertyoption-delete' object.location_property.id object.id %}">Verwijderen</button>
-        <a href="{% url 'locationproperty-update' object.id %}" class="btn btn-secundair">Annuleren</a>
+        <a href="{% url 'propertyoption-update' object.location_property.id object.id %}" class="btn btn-secundair">Annuleren</a>
     </div>
 </form>
 
