--- a/datafundament_fb/locations/templates/locations/location-update.html
+++ b/datafundament_fb/locations/templates/locations/location-update.html
@@ -6,11 +6,9 @@
 
 {% block breadcrumbs %}
 <div class="breadcrumbs">
-    <a href="/">Home</a>
+    <a href="{% url 'locations_urls:location-list' %}">Home</a>
     <span>&rsaquo;</span>
     <a href="{% url 'location-admin' %}">{% translate 'Beheer' %}</a>
-    <span>&rsaquo;</span>
-    <a href="{% url 'locations_urls:location-list' %}">{% translate 'Locaties' %}</a>
     <span>&rsaquo;</span>
     <a href="{% url 'locations_urls:location-detail' location_data.pandcode %}">{{ location_data.naam }}</a>
     <span>&rsaquo;</span>
