--- a/datafundament_fb/locations/templates/locations/location-detail.html
+++ b/datafundament_fb/locations/templates/locations/location-detail.html
@@ -3,13 +3,11 @@
 
 {% block breadcrumbs %}
 <div class="breadcrumbs">
-    <a href="/">Home</a>
+    <a href="{% url 'locations_urls:location-list' %}">Home</a>
     {% if user.is_authenticated %}
     <span>&rsaquo;</span>
     <a href="{% url 'location-admin' %}">{% translate 'Beheer' %}</a>
     {% endif %}
-    <span>&rsaquo;</span>
-    <a href="{% url 'locations_urls:location-list' %}">{% translate 'Locaties' %}</a>
     <span>&rsaquo;</span>
     {{ location_data.naam }}
 </div>
