--- a/datafundament_fb/locations/templates/locations/location-export.html
+++ b/datafundament_fb/locations/templates/locations/location-export.html
@@ -1,17 +1,18 @@
 {% extends 'admin/admin_base.html' %}
 {% load i18n admin_urls static admin_modify %}
 
+{% block extrastyle %}{{ block.super }}
+<link rel="stylesheet" href="{% static 'admin/css/forms.css' %}">{% endblock %}
+
 {% block breadcrumbs %}
 <div class="breadcrumbs">
-    <a href="/">Home</a>
+    <a href="{% url 'locations_urls:location-list' %}">Home</a>
     {% if user.is_authenticated %}
     <span>&rsaquo;</span>
     <a href="{% url 'location-admin' %}">{% translate 'Beheer' %}</a>
     {% endif %}
     <span>&rsaquo;</span>
-    <a href="{% url 'locations_urls:location-list' %}">Locaties</a>
-    <span>&rsaquo;</span>
-    Exporteren
+    {% translate 'Export Locaties' %}
 </div>
 {% endblock %}
 
@@ -31,9 +32,9 @@
 <form action="." method="POST" enctype="multipart/form-data">
     {% csrf_token %}
     <div class="btn-container">
-        <button class="btn btn-primair" type="submit" name="_save" value="Download CSV"
+        <button class="default" type="submit" name="_save" value="Download CSV"
             formaction="{% url 'locations_urls:location-export' %}">Download export</button>
-        </div>
+    </div>
 </form>
 
 {% endblock %}
