--- a/datafundament_fb/locations/templates/locations/location-import.html
+++ b/datafundament_fb/locations/templates/locations/location-import.html
@@ -1,15 +1,16 @@
 {% extends 'admin/admin_base.html' %}
 {% load i18n admin_urls static admin_modify %}
 
+{% block extrastyle %}{{ block.super }}
+<link rel="stylesheet" href="{% static 'admin/css/forms.css' %}">{% endblock %}
+
 {% block breadcrumbs %}
 <div class="breadcrumbs">
-    <a href="/">Home</a>
+    <a href="{% url 'locations_urls:location-list' %}">Home</a>
     <span>&rsaquo;</span>
     <a href="{% url 'location-admin' %}">{% translate 'Beheer' %}</a>
     <span>&rsaquo;</span>
-    <a href="{% url 'locations_urls:location-list' %}">Locaties</a>
-    <span>&rsaquo;</span>
-    Importeren
+    {% translate 'Import Locations' %}
 </div>
 {% endblock %}
 
@@ -27,8 +28,8 @@
     Importeer locaties uit een CSV bronbestand. Let hierbij op het volgende:<br>
 <ul>
     <li>De kolomnamen moeten gelijk zijn aan de korte namen in de database</li>
-    <li>Kolommen moeten gescheiden zijn door een punt-komma ';'</li>
-    <li>In cellen met meervoudige waardes moeten deze gescheiden zijn door een sluisteken '|'</li>
+    <li>Kolommen moeten gescheiden zijn door een komma ','</li>
+    <li>Nieuwe waardes voor keuzelijstje worden automatisch toegevoegd</li>
 </ul>
 </p>
 <form action="." method="POST" enctype="multipart/form-data" novalidate>
