--- a/datafundament_fb/locations/templates/locations/location-list.html
+++ b/datafundament_fb/locations/templates/locations/location-list.html
@@ -1,17 +1,7 @@
 {% extends 'admin/admin_base.html' %}
 {% load i18n static admin_urls admin_modify %}
 
-{% block breadcrumbs %}
-<div class="breadcrumbs">
-    <a href="/">Home</a>
-    {% if user.is_authenticated %}
-    <span>&rsaquo;</span>
-    <a href="{% url 'location-admin' %}">{% translate 'Beheer' %}</a>
-    {% endif %}
-    <span>&rsaquo;</span>
-    Locaties
-</div>
-{% endblock %}
+{% block breadcrumbs %}{% endblock %}
 
 {% block content %}
 <h2>{% translate 'Locaties' %}</h2>
@@ -70,6 +60,7 @@
     {% endif %}
 
     <div class="h5">{{ page_obj.paginator.count }} {% if is_filtered_result %}van de {{ location_count }} {% endif %}locaties gevonden ({{ object_list|length }} getoond)</div>
+
     <div class="btn-container">
         <a href="{% url 'locations_urls:location-export' %}?{{ query }}" class="btn btn-primair">Exporteren</a>
         {% if user.is_authenticated %}
