--- a/datafundament_fb/locations/static/css/ggd_base.css
+++ b/datafundament_fb/locations/static/css/ggd_base.css
@@ -200,3 +200,17 @@ table.table-adam tbody td {
   position: relative;
   text-align: left;
 }
+
+/*******************************************/
+
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border-width: 0;
+}
