--- a/datafundament_fb/help_docs/templates/help_docs/documentation-detail.html
+++ b/datafundament_fb/help_docs/templates/help_docs/documentation-detail.html
@@ -1,25 +1,19 @@
-{% extends 'admin/admin_base.html' %}
-{% load i18n admin_urls static admin_modify %}
+{% extends 'site-base.html' %}
+{% load i18n static %}
+
+{% block title %}
+| Hulp bij {{ object.title }}
+{% endblock %}
 
 {% block breadcrumbs %}
 <div class="breadcrumbs">
-    <a href="{% url 'locations_urls:location-list' %}">Home</a>
-    {% if user.is_authenticated %}
+    <a href="/">Home</a>
     <span>&rsaquo;</span>
-    <a href="{% url 'location-admin' %}">{% translate 'Beheer' %}</a>
-    {% endif %}
+    <a href="{% url 'help_docs_urls:documentation-list' %}">Help</a>
     <span>&rsaquo;</span>
-    {{ location_data.naam }}
+    {{ object.title }}
 </div>
 {% endblock %}
-
-{% if messages %}
-<ul class="messages">
-    {% for message in messages %}
-    <li{% if message.tags %} class="{{ message.tags }}" {% endif %}>{{ message }}</li>
-        {% endfor %}
-</ul>
-{% endif %}
 
 {% block content %}
 <div>
