--- a/datafundament_fb/locations/templates/locations/generic-update.html
+++ b/datafundament_fb/locations/templates/locations/generic-update.html
@@ -1,18 +1,17 @@
-{% extends 'admin/admin_base.html' %}
-{% load i18n admin_urls static admin_modify utils %}
+{% extends 'site-base.html' %}
+{% load i18n static utils %}
 
-{% block breadcrumbs %}
-<div class="breadcrumbs">
-    <a href="{% url 'locations_urls:location-list' %}">Home</a>
-    <span>&rsaquo;</span>
-    <a href="{% url 'location-admin' %}">{% translate 'Beheer' %}</a>
-    <span>&rsaquo;</span>
-    <a href="{% url object|reverse_url:'list' %}">{{ object|verbose_name:'plural' }}</a>
-    <span>&rsaquo;</span>
-    {{ object.name }}
-    <span>&rsaquo;</span>
-    Wijzigen
-</div>
+{% block title %}
+| {{ object.name }} wijzigen
+{% endblock %}
+
+{% block extra-breadcrumbs %}
+<span>&rsaquo;</span>
+<a href="{% url object|reverse_url:'list' %}">{{ object|verbose_name:'plural' }}</a>
+<span>&rsaquo;</span>
+{{ object.name }}
+<span>&rsaquo;</span>
+Wijzigen
 {% endblock %}
 
 {% block content %}
