--- a/datafundament_fb/locations/templates/locations/location-create.html
+++ b/datafundament_fb/locations/templates/locations/location-create.html
@@ -1,23 +1,14 @@
-{% extends 'admin/admin_base.html' %}
-{% load i18n admin_urls static admin_modify %}
+{% extends 'site-base.html' %}
+{% load i18n static %}
 
-{% block breadcrumbs %}
-<div class="breadcrumbs">
-    <a href="{% url 'locations_urls:location-list' %}">Home</a>
-    <span>&rsaquo;</span>
-    <a href="{% url 'location-admin' %}">{% translate 'Beheer' %}</a>
-    <span>&rsaquo;</span>
-    Locatie toevoegen
-</div>
+{% block title %}
+| Locatie aanmaken
 {% endblock %}
 
-{% if messages %}
-<ul class="messages">
-    {% for message in messages %}
-    <li{% if message.tags %} class="{{ message.tags }}" {% endif %}>{{ message }}</li>
-    {% endfor %}
-</ul>
-{% endif %}
+{% block extra-breadcrumbs %}
+<span>&rsaquo;</span>
+Locatie toevoegen
+{% endblock %}
 
 {% block content %}
 <h2>Nieuwe locatie</h2>
