--- a/datafundament_fb/locations/templates/locations/location-detail.html
+++ b/datafundament_fb/locations/templates/locations/location-detail.html
@@ -1,25 +1,14 @@
-{% extends 'admin/admin_base.html' %}
-{% load i18n admin_urls static admin_modify utils %}
+{% extends 'site-base.html' %}
+{% load i18n static utils %}
 
-{% block breadcrumbs %}
-<div class="breadcrumbs">
-    <a href="{% url 'locations_urls:location-list' %}">Home</a>
-    {% if user.is_authenticated %}
-    <span>&rsaquo;</span>
-    <a href="{% url 'location-admin' %}">{% translate 'Beheer' %}</a>
-    {% endif %}
-    <span>&rsaquo;</span>
-    {{ location_data.naam }}
-</div>
+{% block title %}
+| {{ location_data.pandcode }} - {{ location_data.naam }}
 {% endblock %}
 
-{% if messages %}
-<ul class="messages">
-    {% for message in messages %}
-    <li{% if message.tags %} class="{{ message.tags }}" {% endif %}>{{ message }}</li>
-    {% endfor %}
-</ul>
-{% endif %}
+{% block extra-breadcrumbs %}
+<span>&rsaquo;</span>
+{{ location_data.naam }}
+{% endblock %}
 
 {% block content %}
 {% if location_data.archief %}
@@ -68,7 +57,7 @@
         {% if not location_data.archief %}
         <a href="{% url 'locations_urls:location-update' location_data.pandcode %}" class="btn btn-primair">Wijzigen</a>
         {% endif %}
-        <a href="{% url 'location-detail-log' location_data.pandcode %}" class="btn btn-secundair">Logs</a>
+        <a href="{% url 'locations_urls:location-detail-log' location_data.pandcode %}" class="btn btn-secundair">Logs</a>
 
         <form action="." method="POST">
             {% csrf_token %}
