--- a/datafundament_fb/locations/templates/locations/location-export.html
+++ b/datafundament_fb/locations/templates/locations/location-export.html
@@ -1,28 +1,14 @@
-{% extends 'admin/admin_base.html' %}
-{% load i18n admin_urls static admin_modify %}
+{% extends 'site-base.html' %}
+{% load i18n admin_urls static %}
 
-{% block extrastyle %}{{ block.super }}
-<link rel="stylesheet" href="{% static 'admin/css/forms.css' %}">{% endblock %}
-
-{% block breadcrumbs %}
-<div class="breadcrumbs">
-    <a href="{% url 'locations_urls:location-list' %}">Home</a>
-    {% if user.is_authenticated %}
-    <span>&rsaquo;</span>
-    <a href="{% url 'location-admin' %}">{% translate 'Beheer' %}</a>
-    {% endif %}
-    <span>&rsaquo;</span>
-    {% translate 'Export Locaties' %}
-</div>
+{% block title %}
+| Locaties exporteren
 {% endblock %}
 
-{% if messages %}
-<ul class="messages">
-    {% for message in messages %}
-    <li{% if message.tags %} class="{{ message.tags }}" {% endif %}>{{ message }}</li>
-        {% endfor %}
-</ul>
-{% endif %}
+{% block extra-breadcrumbs %}
+<span>&rsaquo;</span>
+Export
+{% endblock %}
 
 {% block content %}
 <h2>Exporteer Locaties naar CSV</h2>
@@ -32,7 +18,7 @@
 <form action="." method="POST" enctype="multipart/form-data">
     {% csrf_token %}
     <div class="btn-container">
-        <button class="default" type="submit" name="_save" value="Download CSV"
+        <button class="btn btn-primair" type="submit" name="_save" value="Download CSV"
             formaction="{% url 'locations_urls:location-export' %}">Download export</button>
     </div>
 </form>
