--- a/datafundament_fb/locations/templates/locations/location-log.html
+++ b/datafundament_fb/locations/templates/locations/location-log.html
@@ -1,27 +1,30 @@
-{% extends 'admin/admin_base.html' %}
-{% load i18n admin_urls static admin_modify utils %}
+{% extends 'site-base.html' %}
+{% load i18n static utils %}
 
-{% block breadcrumbs %}
-<div class="breadcrumbs">
-    <a href="{% url 'locations_urls:location-list' %}">Home</a>
-    <span>&rsaquo;</span>
-    <a href="{% url 'location-admin' %}">{% translate 'Beheer' %}</a>
-    <span>&rsaquo;</span>
-    {% if location %}
-    <a href="{% url 'location-log' %}">{% translate 'Logs' %}</a>
-    <span>&rsaquo;</span>
-    {{ location.name }}
-    {% else %}
-    Logs
-    {% endif %}
-</div>
+{% block title %}
+{% if location %}
+| {{ location.name }} logs
+{% else %}
+| Logs
+{% endif %}
+{% endblock %}
+
+{% block extra-breadcrumbs %}
+<span>&rsaquo;</span>
+{% if location %}
+<a href="{% url 'locations_urls:location-log' %}">Logs</a>
+<span>&rsaquo;</span>
+{{ location.name }}
+{% else %}
+Logs
+{% endif %}
 {% endblock %}
 
 {% block content %}
 {% if location %}
 <h2>Log van {{ location.pandcode }} - {{ location.name }}</h2>
 {% else %}
-<h2>Datafundament logboek</h2>
+<h2>Logs</h2>
 {% endif %}
 <div class="page-content">
     <table class="table-adam">
@@ -59,7 +62,7 @@
     {% if location %}
     <a href="{% url 'locations_urls:location-detail' location.pandcode %}" class="btn btn-secundair">Terug</a>
     {% else %}
-    <a href="{% url 'location-admin'%}" class="btn btn-secundair">Terug</a>
+    <a href="{% url 'locations_urls:location-admin'%}" class="btn btn-secundair">Terug</a>
     {% endif %}
 </div>
 {% endblock %}
