--- a/datafundament_fb/locations/templates/locations/propertyoption-delete.html
+++ b/datafundament_fb/locations/templates/locations/propertyoption-delete.html
@@ -1,23 +1,19 @@
-{% extends 'admin/admin_base.html' %}
-{% load i18n admin_urls static admin_modify utils %}
+{% extends 'site-base.html' %}
+{% load i18n static utils %}
 
-{% block extrastyle %}{{ block.super }}
-<link rel="stylesheet" href="{% static 'admin/css/forms.css' %}">{% endblock %}
+{% block title %}
+| {{ object.option }} verwijderen
+{% endblock %}
 
-{% block breadcrumbs %}
-<div class="breadcrumbs">
-    <a href="{% url 'locations_urls:location-list' %}">Home</a>
-    <span>&rsaquo;</span>
-    <a href="{% url 'location-admin' %}">{% translate 'Beheer' %}</a>
-    <span>&rsaquo;</span>
-    <a href="{% url 'locationproperty-list' %}">{{ object.location_property|verbose_name:'plural' }}</a>
-    <span>&rsaquo;</span>
-    <a href="{% url 'locationproperty-update' object.location_property.id %}">{{ object.location_property.label }}</a>
-    <span>&rsaquo;</span>
-    <a href="{% url object|reverse_url:'update' object.location_property.id object.id %}">{{ object.option }}</a>
-    <span>&rsaquo;</span>
-    Verwijderen
-</div>
+{% block extra-breadcrumbs %}
+<span>&rsaquo;</span>
+<a href="{% url 'locations_urls:locationproperty-list' %}">{{ object.location_property|verbose_name:'plural' }}</a>
+<span>&rsaquo;</span>
+<a href="{% url 'locations_urls:locationproperty-update' object.location_property.id %}">{{ object.location_property.label }}</a>
+<span>&rsaquo;</span>
+<a href="{% url object|reverse_url:'update' object.location_property.id object.id %}">{{ object.option }}</a>
+<span>&rsaquo;</span>
+Verwijderen
 {% endblock %}
 
 {% block content %}
@@ -34,8 +30,8 @@
 <form action="." method="POST">
     {% csrf_token %}
     <div class="btn-container">
-        <button class="btn btn-primair" type="submit" name="_save" value="Save" formaction="{% url 'propertyoption-delete' object.location_property.id object.id %}">Verwijderen</button>
-        <a href="{% url 'propertyoption-update' object.location_property.id object.id %}" class="btn btn-secundair">Annuleren</a>
+        <button class="btn btn-primair" type="submit" name="_save" value="Save" formaction="{% url 'locations_urls:propertyoption-delete' object.location_property.id object.id %}">Verwijderen</button>
+        <a href="{% url 'locations_urls:propertyoption-update' object.location_property.id object.id %}" class="btn btn-secundair">Annuleren</a>
     </div>
 </form>
 
