--- a/datafundament_fb/templates/site-base.html
+++ b/datafundament_fb/templates/site-base.html
@@ -7,6 +7,7 @@
 <head>
   <title>Datfundament Facilitair Beheer{% block title %}{% endblock %}</title>
   {% block extrastyle %}
+  <link rel="stylesheet" href="{% static 'admin/css/base.css' %}">
   <link rel="stylesheet" href="{% static 'admin/css/forms.css' %}">
   <link rel="stylesheet" href="{% static 'css/ggd_base.css' %}">
   <link rel="stylesheet" href="{% static 'css/ggd_buttons.css' %}">
@@ -46,13 +47,13 @@
       <nav>
         <ul>
           {% if user.is_anonymous %}
-          <li><a href="{% url 'admin:login' %}?next={{ request.path }}">Inloggen</a></li>
+          <li><a href="{% url 'login' %}?next={{ request.path }}">Inloggen</a></li>
           {% endif %}
           {% if user.is_authenticated %}
           <li><a href="{% url 'help_docs_urls:documentation-list' %}">Help</a></li>
           <li><a href="{% url 'locations_urls:location-admin' %}">Beheer</a></li>
           <li>
-            <form id="logout-form" method="post" action="{% url 'admin:logout' %}">
+            <form id="logout-form" method="post" action="{% url 'logout' %}">
               {% csrf_token %}
               <button type="submit">Uitloggen</button>
             </form>
@@ -89,6 +90,13 @@
         <ul class="messagelist">{% for message in messages %}
           <li{% if message.tags %} class="{{ message.tags }}" {% endif %}>{{ message|capfirst }}</li>
             {% endfor %}
+        </ul>
+        {% endif %}
+        {% if form.non_field_errors %}
+        <ul class="messagelist">
+          {% for error in form.non_field_errors %}
+          <li class="error">{{ error }}</li>
+          {% endfor %}
         </ul>
         {% endif %}
         {% endblock messages %}
