--- a/datafundament_fb/templates/site-base.html
+++ b/datafundament_fb/templates/site-base.html
@@ -38,7 +38,7 @@
               <img src="{% static 'images/logo-gemeente-amsterdam-small.svg' %}" class="site-logo-small"
                 alt="Logo Gemeente Amsterdam" />
             </div>
-            <div id="site-name">{{ site_header|default:_('Datafundament Facilitair Bureau') }}</div>
+            <div id="site-name">Datafundament Facilitair Bureau</div>
           </a>
         </h1>
         {% endblock %}
